Updates to projects,
I also removed some sections temporarily: 
- Images from the projects, until I get some better ones
- Game Jam projects until I do a better version
- Down Below game page until I reorganize its content 

- I also removed 1 of the talks

--- a/game-09signifier.html
+++ b/game-09signifier.html
@@ -32,14 +32,36 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">The Signifier</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Designer shall not live by game alone  </p>
+							<p>This eerie, psychological game was developed by Playmestudio. Together with VRMonkey, we ported it to VR.<br>
+							Because the game discusses deeply the relationship between virtual and physical, and has a lot of mechanics rooted on that, porting it to VR was an extra responsibility.
+							<br>
+							<br>
+							<a href="https://www.oculus.com/experiences/quest/5548503715177686/" class="button">Oculus Page</a>
 
-							<h2>Header</h2>
-							<strong>List</strong>
-							<br></br>	
-								
-							<p>Talking</p>
+							</p>
+							<span class="image fit"><img src="images/printSignifier.jpg" alt="" /></span>
+							<p><h3>My responsibilities were the following:</h3><br>
+								<ul>
+									<li><strong>VR UX Guidelines </strong>, to guarantee the same basic functions.  <strong>Transpose the much needed player UI </strong> when investigating Memories, object interactions, inventory and dialogue 
+									<li><strong>Translating mechanics for VR. </strong> Many of the game mechanics assume a player that is standing still and clicking while an animation plays. Changes had to be designed so that the game became more tactile-based.
+									<li><strong>Solving incompatibility issues</strong>, such as puzzles or rooms that were not designed with VR in mind, and wouldn’t work in this context.
+									<li><strong>Creating new mechanics to get the most out of VR,</strong> especially when investigating visuals or noises, or interacting with Memories.
+								</ul>
+							 </p>
+							<br>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/-GUqMaG82d4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							<br>
+							<br>
+							<p>
+								I worked with other designers until my departure from the project. <br>
+								Mostly <strong>David Fenner </strong>, the original designer for The Signifier. <br>
+								I also had  <strong>Victor Valdo </strong> as a Designer on my team.
+							</p>
+							<a href="https://www.oculus.com/experiences/quest/5548503715177686/" class="button">Oculus Page</a>
+							<br>
+							<br>
+
+							
 
 						</div>
 					</section>
