--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 								</div>
 							</div>
 						</section>
-						<section>
+<!--						<section>
 							<a href="game-07gamejam.html" class="image"><img src="images/thumbGJ.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
@@ -191,6 +191,7 @@
 								</div>
 							</div>
 						</section>
+-->
 
 <!--
 						<section>
