--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="game-01dbf.html" class="image"><img src="images/thumbDBF.png" alt="" data-position="center center" /></a>
+							<a href="game-01dbf.html" class="image"><img src="images/thumbDBF2.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Drunkn Bar Fight</h2>
@@ -71,7 +71,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="game-02aq.html" class="image"><img src="images/thumbAQ.jpg" alt="" data-position="top center" /></a>
+							<a href="game-02aq.html" class="image"><img src="images/thumbAQ2.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Amazon Quest</h2>
@@ -105,7 +105,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="game-04umb.html" class="image"><img src="images/thumbUMB.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="game-04umb.html" class="image"><img src="images/thumbUMB2.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Umbilical</h2>
@@ -123,7 +123,7 @@
 						</section>
 						
 						<section>
-							<a href="game-09signifier.html" class="image"><img src="images/thumbSignifier.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="game-09signifier.html" class="image"><img src="images/thumbSignifier2.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>The Signifier</h2>
@@ -159,7 +159,7 @@
 						</section>
 -->
 						<section>
-							<a href="game-06fdc.html" class="image"><img src="images/thumbFDC.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="game-06fdc.html" class="image"><img src="images/thumbFDC2.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Fábricas de Cultura</h2>
