Changes on main page, added buttons

--- a/index.html
+++ b/index.html
@@ -41,11 +41,9 @@
 							<br>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Games</a></li>
-								<li><a href="https://drive.google.com/file/d/1J00o9TLDUd8QyrUh7wNSwHrIDsuBe5nK/view?usp=sharing" target="_blank" class="button scrolly">Resume</a></li>
-								
-
-
+								<li><a href="https://drive.google.com/file/d/1J00o9TLDUd8QyrUh7wNSwHrIDsuBe5nK/view?usp=sharing" target="_blank" class="button primary">Resume</a></li>
 								<li><a href="#two" class="button scrolly">Talks</a></li>
+								<li><a href="https://www.linkedin.com/in/eduardo-cucick-110664189/" target="_blank" class="button scrolly">LinkedIn</a></li>
 							</ul>
 						</div>
 					</section>
