--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<div class="inner">
 							<h3>Eduardo Cucick</h3>
 							<small>Hello, there! </small><br>
-							<small>As game designer, educator and ocasional magician,   <br> I do things that make players go from "hm?" to "aha!", hopefuly going through "wow!"</small><br>
+							<small>As game designer, educator and occasional magician,   <br> I do things that make players go from "hm?" to "aha!", hopefully going through "wow!"</small><br>
 							<br>
 							<br>
 							<ul class="actions">
@@ -271,4 +271,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
